Thu May 03 04:03:35 BST 2007  Olly Betts <olly@survex.com>

	* ./: Update svn:externals to pull rev8430 of xapian-core's common
	  subdirectory.
	* scriptindex.cc: Remove sleep() wrapper.

Wed May 02 03:26:38 BST 2007  Olly Betts <olly@survex.com>

	* docs/omegascript.txt,query.cc: Removed $freqs as it has been
	  deprecated for ages.

Wed May 02 03:19:18 BST 2007  Olly Betts <olly@survex.com>

	* docs/scriptindex.txt: Explicitly note that index=nopos is deprecated
	  (scriptindex already emits a warning).

Wed May 02 03:17:03 BST 2007  Olly Betts <olly@survex.com>

	* docs/cgiparams.txt: FMT isn't limited to just `a-z' - the
	  actual restriction is that it may not contain `..'.

Wed May 02 03:02:53 BST 2007  Olly Betts <olly@survex.com>

	* scriptindex.cc: Remove -q and -u options - they no longer do
	  anything and are only accepted for compatibility with really old
	  versions (0.6.1 and earlier and 0.7.5 and earlier respectively).

Wed Apr 25 21:47:48 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am: omega doesn't need indextext.cc.

Wed Apr 25 21:46:25 BST 2007  Olly Betts <olly@survex.com>

	* query.cc: Remove unused `#include "indextext.h"'.

Wed Apr 25 02:37:15 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Add support like xapian-core has for
	  `configure --enable-quiet', `make QUIET=' and `make QUIET=y'.

Mon Apr 23 15:42:24 BST 2007  Olly Betts <olly@survex.com>

	* date.cc,datematchdecider.cc,utils.cc: Fix compilation with GCC 4.3
	  snapshot.

Mon Apr 23 15:38:00 BST 2007  Olly Betts <olly@survex.com>

	* portability/mkdtemp.cc: config.h should always be included first and
	  with angle brackets.  Use safeerrno.h not errno.h.  No special
	  headers are required here for __CYGWIN__, and safesysstat.h provides
	  a two argument wrapper for mkdir, so we don't need any
	  __WIN32__-specific magic either.

Mon Apr 23 12:14:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>
