@@ -1,3 +1,8 @@
+Thu May 03 15:16:31 BST 2007  Olly Betts <olly@survex.com>
+
+	* Makefile.am,indextext.cc,indextext.h,omindex.cc,scriptindex.cc:
+	  Update to use new TermGenerator class.
+
 Thu May 03 04:03:35 BST 2007  Olly Betts <olly@survex.com>
 
 	* ./: Update svn:externals to pull rev8430 of xapian-core's common
